fix menu on ios remove webcam button

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,13 +1,15 @@
-ion-menu {
-  --width: 100vw;
-
-  ion-content {
-    width: 100%;
-    top: var(--ion-statusbar-padding) !important;
-  }
-
-  #menu {
-    box-sizing: border-box;
-    height: 100%;
+:host {
+  ion-menu {
+    --width: 100vw;
+  
+    ion-content {
+      width: 100%;
+    }
+  
+    #menu {
+      box-sizing: border-box;
+      height: 100%;
+      padding-top: calc(2rem + env(safe-area-inset-top)) !important;
+    }
   }
 }
