--- a/src/app/pages/home/home.page.scss
+++ b/src/app/pages/home/home.page.scss
@@ -14,6 +14,7 @@
   ion-toolbar {
     --background: transparent;
     --ion-color-base: transparent !important;
+    padding-top: 0 !important;
   }
 
   .menu-button {
